--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "type": "module",
   "scripts": {
     "start": "node ./bin/www.js",
-    "dev": "nodemon ./bin/www.js"
+    "dev": "nodemon ./bin/www.js",
+    "users": "node ./models/data/users.js",
+    "cities": "node ./models/data/cities.js",
+    "itineraries": "node ./models/data/itineraries.js",
+    "activities": "node ./models/data/activities.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,6 +18,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^7.4.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1"
   }
